Fix bug with visibility of the number of products in the basket

--- a/src/components/layout/CompanyClaim/CompanyClaim.module.scss
+++ b/src/components/layout/CompanyClaim/CompanyClaim.module.scss
@@ -47,7 +47,7 @@
       }
 
       .cartCounter {
-        width: 28px;
+        width: 48px;
         height: 27px;
         border-radius: 14px;
         background-color: $header-bg;
@@ -58,8 +58,9 @@
         color: rgb(224, 227, 237);
         position: absolute;
         top: 50%;
-        right: 0;
-        transform: translate(50%, -50%);
+        right: 0%;
+        left: 40%;
+        transform: translate(30%, -50%);
       }
 
       &:hover {
